--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,18 @@
 body {
   margin: 0;
   font-family: "Noto Sans KR", sans-serif;
-  background-color: #0080ff;
+  background-image: url('../images/image_bg_portrait.png');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   color: white;
   text-align: center;
+}
+
+@media (orientation: landscape) {
+  body {
+    background-image: url('../images/image_bg_landscape.png');
+  }
 }
 
 .container {
@@ -67,25 +76,23 @@ p.subtitle {
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 20px;
-  margin: 30px 0;
+  gap: 5px;
+  margin: 20px 0;
 }
 
 .grid-item {
-  background-color: white;
-  color: #333;
-  border-radius: 15px;
-  font-weight: bold;
+  overflow: hidden;
   display: flex;
+  border-radius: 20px;
   flex-direction: column;
   align-items: center;
 }
 
 .grid-item img {
   max-width: 100%;
-  height: auto;
-  border-radius: 10px;
-  border: none; /* 이미지 테두리 제거 */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   outline: none;
 }
 
@@ -106,7 +113,7 @@ a:hover {
   color: #333;
   padding: 15px;
   margin: 20px 0;
-  border-radius: 10px;
+  border-radius: 17px;
   font-weight: bold;
 }
 
